EEVEE-Next: Metal + Intel iGPU support #122361
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#122361
Loading…
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: macOS-14.5-x86_64-i386-64bit 64 Bits
Graphics card: Metal API Intel(R) UHD Graphics 630 1.2
Blender Version
Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-05-28 09:08, hash:
669b15a53dc6
Worked: (newest version of Blender that worked as expected)
Short description of error
Intel iGPU on metal + EEVEE-next is not working. There has been some investigations in the past what will be elaborated in this ticket.
Exact steps for others to reproduce the error
Intel iGPU + EEVEE-Next should be a supported option. But there are issues when it comes to Metal.
January 2024:
Mostly unusable due to issues when using atomics.12 April 2024:
Currently Metal + Intel fails with the 'Film Accumulation Shader' There are 2 variants and it seems like the compute variant is working, but the graphics variant is failing due to unsupported texture format for atomics read/write. This has been discussed previously and it might point to the read-modify-write access pattern.When used in the viewport the result flickers. When used in with final rendering it seems to be stable. (might be related with the film accumulation shader)Final image render of waspbot.blend (no raytracing)
Final image render of waspbot.blend (with raytracing)
My impression was that fixing the read-modify-write access pattern (perhaps with a workaround) would be the most pressing issue. The raytrace might be tweaks.
28 May 2024:
Situation got worse due to recent changes. Currently only emissive materials seems to be rendered. Might be related to changes in the lighting pipeline.11 Jun 2024:
The black rendering has been fixed and we are now in the state of 12 April.
File is available at https://download.blender.org/demo/eevee/wasp_bot/wasp_bot.blend
EEVEE-Next: Metal + Intel iGPU nor workingto EEVEE-Next: Metal + Intel iGPU supportMetal seems to have some issue, noticed it yesterday (RTX 3060). Cycles vs EEVEE.
@genesis2303 Please report a bug. This issue is about the Apple Metal backend, not about Metal materials.
Yes I know confusing right :-)
Was asked to give an update.
last week we detected that the feedback texture used in the screen raytrace shader uses an incorrect texture type (R11G10B11 in stead of RGBA16F) although it is not set by EEVEE. It is hard to disect why due to buggy debugging tools. Still in investigation.